// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with additional style properties 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
        "lineHeight": 19,
      },
    ]
  }
>
  IOS
</Text>
`;

exports[`renders with the default properties for iOS 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
        "lineHeight": 19,
      },
    ]
  }
>
  IOS
</Text>
`;

exports[`supports multiple nested strings 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "red",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
        "lineHeight": 19,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "red",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
          "lineHeight": 19,
        },
        undefined,
      ]
    }
  >
    First part and 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "red",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
          "lineHeight": 19,
        },
        undefined,
      ]
    }
  >
    second part
  </Text>
</Text>
`;

exports[`supports nested styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
        "lineHeight": 19,
      },
    ]
  }
>
  I am bold 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#30363d",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": -0.15,
          "lineHeight": 19,
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    and red
  </Text>
</Text>
`;

exports[`works applies the styles recursively 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
        "lineHeight": 19,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#30363d",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": -0.15,
          "lineHeight": 19,
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    bold and red
  </Text>
</Text>
`;

exports[`works even with the distant Text nodes 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
        "lineHeight": 19,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#30363d",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": -0.15,
          "lineHeight": 19,
        },
        undefined,
      ]
    }
  >
    should be bold as well
  </Text>
</Text>
`;

exports[`works with nullable child 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
        "lineHeight": 19,
      },
    ]
  }
>
  text
   
   
  text
   
   
  text
</Text>
`;
